--- a/Data pre-processing & visualization/008 NumPy: Индексы & Срезы/98dbae0c3a57bbaa595d259d9b1c863c.ipynb
+++ b/Data pre-processing & visualization/008 NumPy: Индексы & Срезы/98dbae0c3a57bbaa595d259d9b1c863c.ipynb
@@ -18,12 +18,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "1.19.5\n"
+     ]
+    }
+   ],
    "source": [
     "# Начало вашего кода\n",
-    "\n",
+    "import numpy as np\n",
     "# Конец вашего кода\n",
     "print(np.__version__)"
    ]
@@ -50,16 +58,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[1, 5, 2]\n"
+     ]
+    }
+   ],
    "source": [
     "list1 = [1,3,5,2,3,5,72,4,7,4,2,6,5,4,89,9,6,423]\n",
     "list2 = []\n",
     "\n",
     "# list\n",
     "# Начало вашего кода\n",
-    "\n",
+    "list2.extend(list1[0:11:5])\n",
     "# Конец вашего кода\n",
     "print(list2)"
    ]
@@ -76,13 +92,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[1 5 2]\n"
+     ]
+    }
+   ],
    "source": [
     "# numpy.ndarray\n",
     "# Начало вашего кода\n",
-    "\n",
+    "ndarr1 = np.array(list1)\n",
+    "ndarr2 = ndarr1[0:11:5]\n",
     "# Конец вашего кода\n",
     "print(ndarr2)"
    ]
@@ -108,16 +133,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[1, 2, 3, 4, 5, 9]\n"
+     ]
+    }
+   ],
    "source": [
     "list_of_lists = [[1,2,3,4],[5,6,7,8],[9,10,11,12]]\n",
     "new_list = []\n",
     "\n",
     "# list\n",
     "# Начало вашего кода\n",
-    "\n",
+    "for i in list_of_lists:\n",
+    "    idx_i = list_of_lists.index(i)\n",
+    "    for j in i:\n",
+    "        idx_j = i.index(j)\n",
+    "        if (idx_i * idx_j)%j == 0:\n",
+    "            new_list.append(j)\n",
     "# Конец вашего кода\n",
     "print(new_list)"
    ]
@@ -134,12 +172,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[1 2 3 4 5 9]\n"
+     ]
+    }
+   ],
    "source": [
     "# numpy.ndarray\n",
     "# Начало вашего кода\n",
+    "new_list = np.array(list_of_lists)\n",
+    "if len(new_list.shape)==2:\n",
+    "    w=new_list.shape[0]\n",
+    "    h=new_list.shape[1]\n",
+    " \n",
+    "new = []\n",
+    "for x in range(w):\n",
+    "    for y in range(h):\n",
+    "        if (y*x)%new_list[x,y] == 0:\n",
+    "            new.append(new_list[x,y])\n",
+    "ndarr3 = np.array(new)\n",
     "\n",
     "# Конец вашего кода\n",
     "print(ndarr3)"
@@ -187,16 +244,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[[6, 7], [10, 11], [14, 15]]\n"
+     ]
+    }
+   ],
    "source": [
     "list_of_lists = [[1,2,3,4],[5,6,7,8],[9,10,11,12],[13,14,15,16],[17,18,19,20]]\n",
     "\n",
     "def slice_list(orig_list, row_str, row_end, col_str, col_end):\n",
     "    # list\n",
     "    # Начало вашего кода\n",
-    "\n",
+    "    new = []\n",
+    "    for i in orig_list[row_str:row_end]:\n",
+    "        new.append(i[col_str:col_end])\n",
+    "    return new\n",
     "    # Конец вашего кода\n",
     "\n",
     "print(slice_list(list_of_lists,1,4,1,3))"
@@ -214,16 +282,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[[6, 7], [10, 11], [14, 15]]\n"
+     ]
+    }
+   ],
    "source": [
     "list_of_lists = [[1,2,3,4],[5,6,7,8],[9,10,11,12],[13,14,15,16],[17,18,19,20]]\n",
     "\n",
     "def slice_list_ndarr(orig_list, row_str, row_end, col_str, col_end):\n",
     "    # numpy.ndarray\n",
     "    # Начало вашего кода\n",
-    "\n",
+    "    nporing_list = np.array(orig_list)\n",
+    "    return nporing_list[row_str:row_end, col_str:col_end].tolist()\n",
     "    # Конец вашего кода\n",
     "\n",
     "print(slice_list_ndarr(list_of_lists,1,4,1,3))"
@@ -263,7 +340,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
