--- a/Data pre-processing & visualization/009 NumPy: Векторизация & Broadcasting/2fcf27f0fa9d33bd5a505cbdedb77f88.ipynb
+++ b/Data pre-processing & visualization/009 NumPy: Векторизация & Broadcasting/2fcf27f0fa9d33bd5a505cbdedb77f88.ipynb
@@ -18,12 +18,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "1.19.5\n"
+     ]
+    }
+   ],
    "source": [
     "# Начало вашего кода\n",
-    "\n",
+    "import numpy as np\n",
     "# Конец вашего кода\n",
     "print(np.__version__)"
    ]
@@ -50,16 +58,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[5, 5, 11, 7, 7, 94, 81, 10, 430]\n"
+     ]
+    }
+   ],
    "source": [
     "list1 = [1,3,5,2,3,5,72,4,7]\n",
     "list2 = [4,2,6,5,4,89,9,6,423]\n",
     "list3 = []\n",
     "# list\n",
     "# Начало вашего кода\n",
-    "\n",
+    "for i in range(len(list1)):\n",
+    "    list3.append(list1[i] + list2[i])\n",
     "# Конец вашего кода\n",
     "print(list3)"
    ]
@@ -76,15 +93,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[  5   5  11   7   7  94  81  10 430]\n"
+     ]
+    }
+   ],
    "source": [
     "ndarr1 = np.array(list1)\n",
     "ndarr2 = np.array(list2)\n",
     "# numpy.ndarray\n",
     "# Начало вашего кода\n",
-    "\n",
+    "ndarr3 = ndarr1 + ndarr2\n",
     "# Конец вашего кода\n",
     "print(ndarr3)"
    ]
@@ -127,6 +152,24 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Пожалуйста, спрогнозируйте формы массивов numpy.ndarray.\n",
+    "A.shape      (12,10,4,5)\n",
+    "B.shape      (2,1)\n",
+    "(A+B).shape  (12 и 2 не совместимы)\n",
+    "A.shape      (1,10,1)\n",
+    "B.shape      (4,)\n",
+    "(A*B).shape  (4, 10, 1)\n",
+    "A.shape      (100,32,15,646,234,65,87,1,3,4,6)\n",
+    "B.shape      (1,1,234,65,1,1,3,1,6)\n",
+    "(A*B).shape  (15 и 234 не совместимы)\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -150,7 +193,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
