--- a/Data pre-processing & visualization/011 NumPy: Логическое индексирование/8ffe2329ce5e67cb868aa428a929135b.ipynb
+++ b/Data pre-processing & visualization/011 NumPy: Логическое индексирование/8ffe2329ce5e67cb868aa428a929135b.ipynb
@@ -25,12 +25,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[[11  2  3]\n [11  2  3]\n [ 3  2 11]]\n"
+     ]
+    }
+   ],
    "source": [
     "#Начало вашего кода\n",
-    "\n",
+    "import numpy as np\n",
     "#Конец вашего кода"
    ]
   },
@@ -541,6 +549,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = np.array([[1,2,3],[1,2,3],[3,2,1]])\n",
+    "a[a==1] = 11\n",
+    "print(a)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -564,7 +583,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
