--- a/03_hw_03.ipynb
+++ b/03_hw_03.ipynb
@@ -60,62 +60,6 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "%matplotlib inline"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "H H H\n",
-      "H H T\n",
-      "H T H\n",
-      "H T T\n",
-      "T H H\n",
-      "T H T\n",
-      "T T H\n",
-      "T T T\n",
-      "\n",
-      "HHT, HTH, HTT, THH, THT, TTH, TTT, \n",
-      "['HHT', 'HTH', 'HTT', 'THH', 'THT', 'TTH', 'TTT']\n",
-      "[['H', 'H', 'H'], ['H', 'H', 'T'], ['H', 'T', 'H'], ['H', 'T', 'T'], ['T', 'H', 'H'], ['T', 'H', 'T'], ['T', 'T', 'H'], ['T', 'T', 'T']]\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Auxiliary code for solving coin toss problems\n",
-    "list_of_flips = []\n",
-    "list_coin = ['H', 'T']\n",
-    "for flip1 in list_coin:\n",
-    "    for flip2 in list_coin:\n",
-    "        for flip3 in list_coin:\n",
-    "            list_of_flips.append([flip1, flip2,flip3])\n",
-    "            print(flip1, flip2,flip3)\n",
-    "\n",
-    "print()                    \n",
-    "list_of_1T = []\n",
-    "for one in list_of_flips:\n",
-    "    if 'T' in one:\n",
-    "        list_of_1T.append(''.join(one))\n",
-    "        print(''.join(one), end=', ')\n",
-    "print()\n",
-    "print(list_of_1T)        \n",
-    "print(list_of_flips)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -139,7 +83,7 @@
     "p_heads_least_5 =  1 - 1/2 - 1/2*1/2 - 1/2*1/2*1/2 - 1/2*1/2*1/2*1/2\n",
     "\n",
     "# Какова вероятность, что для получения 3 понадобится ровно четыре броска игральной кости? Присвойте результат переменной p_3_4.\n",
-    "p_3_4 = (5/6)*(5/6)*(5/6)*(1/6)\n",
+    "p_3_4 = 5/6 * 5/6 * 5/6 * 1/6\n",
     "\n",
     "# Какова вероятность, что для получения 6 понадобится не менее трех бросков игральной кости? Присвойте результат переменной p_6_least_3.\n",
     "p_6_least_3 = 1 - 1/6 - 5/6*1/6\n",
@@ -184,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -202,19 +146,19 @@
    "source": [
     "#Начало вашего кода\n",
     "# Какова вероятность того, что мы получим (Heads,Tails), именно в этом порядке? Присвойте результат переменной p_ht.\n",
-    "p_ht = 1/2**2\n",
+    "p_ht = 1 / 2**2\n",
     "\n",
     "# Какова вероятность того, что мы получим (Heads,Heads,Tails), именно в этом порядке? Присвойте результат переменной p_hht.\n",
-    "p_hht = 1/2**3\n",
+    "p_hht = 1 / 2**3\n",
     "\n",
     "# Какова вероятность того, что мы получим (Tails,Tails,Tails), именно в этом порядке? Присвойте результат переменной p_ttt.\n",
-    "p_ttt = 1/2**3\n",
+    "p_ttt = 1 / 2**3\n",
     "\n",
     "# Какова вероятность того, что мы получим (Heads,Tails,Tails,Heads), именно в этом порядке? Присвойте результат переменной p_htth.\n",
-    "p_htth = 1/2**4\n",
+    "p_htth = 1 / 2**4\n",
     "\n",
     "# Какова вероятность того, что мы получим (Tails,Heads,Tails,Heads,Heads), именно в этом порядке? Присвойте результат переменной p_ththh.\n",
-    "p_ththh = 1/2**5\n",
+    "p_ththh = 1 / 2**5\n",
     "\n",
     "#Конец вашего кода\n",
     "print(f'вероятность того, что мы получим (Heads,Tails), именно в этом порядке: {p_ht*100:.2f} %')\n",
@@ -262,13 +206,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "вероятность того, что мы получим (1,2), именно в этом порядке: 2.78 %\n",
+      "вероятность того, что мы получим (3,2), именно в этом порядке: 5.56 %\n",
+      "вероятность того, что мы получим (3,3,3), именно в этом порядке: 3.70 %\n",
+      "вероятность того, что мы получим (3,3,2), именно в этом порядке: 1.85 %\n",
+      "вероятность того, что мы получим (1,2,3,4), именно в этом порядке: 0.15 %\n",
+      "вероятность того, что мы получим (3,2,3,2,1), именно в этом порядке: 0.05 %\n",
+      "вероятность того, что мы получим (1,1,1,1,1,5), именно в этом порядке: 0.00 %\n"
+     ]
+    }
+   ],
    "source": [
     "#Начало вашего кода\n",
+    "# Какова вероятность того, что мы получим (1,2), именно в этом порядке? Присвойте результат переменной p_12.\n",
+    "p_12 = 1 / 6**2\n",
     "\n",
-    "#Конец вашего кода"
+    "# Какова вероятность того, что мы получим (3,2), именно в этом порядке? Присвойте результат переменной p_32.\n",
+    "p_32 = 2 / 6**2\n",
+    "\n",
+    "# Какова вероятность того, что мы получим (3,3,3), именно в этом порядке? Присвойте результат переменной p_333.\n",
+    "p_333 = 2/6 * 2/6 * 2/6\n",
+    "\n",
+    "# Какова вероятность того, что мы получим (3,3,2), именно в этом порядке? Присвойте результат переменной p_332.\n",
+    "p_332 = 2/6 * 2/6 * 1/6\n",
+    "\n",
+    "# Какова вероятность того, что мы получим (1,2,3,4), именно в этом порядке? Присвойте результат переменной p_1234.\n",
+    "p_1234 = 1/6 * 1/6 * 2/6 * 1/6\n",
+    "\n",
+    "# Какова вероятность того, что мы получим (3,2,3,2,1), именно в этом порядке? Присвойте результат переменной p_32321.\n",
+    "p_32321 = 2/6 * 1/6 * 2/6 * 1/6 * 1/6\n",
+    "\n",
+    "# Какова вероятность того, что мы получим (1,1,1,1,1,5), именно в этом порядке? Присвойте результат переменной p_111115\n",
+    "p_111115 = 1/6 * 1/6 * 1/6 * 1/6 * 1/6 * 0\n",
+    "# Задачка с подвохом, 5 нет на данном кубике\n",
+    "\n",
+    "#Конец вашего кода\n",
+    "print(f'вероятность того, что мы получим (1,2), именно в этом порядке: {p_12*100:.2f} %')\n",
+    "print(f'вероятность того, что мы получим (3,2), именно в этом порядке: {p_32*100:.2f} %')\n",
+    "print(f'вероятность того, что мы получим (3,3,3), именно в этом порядке: {p_333*100:.2f} %')\n",
+    "print(f'вероятность того, что мы получим (3,3,2), именно в этом порядке: {p_332*100:.2f} %')\n",
+    "print(f'вероятность того, что мы получим (1,2,3,4), именно в этом порядке: {p_1234*100:.2f} %')\n",
+    "print(f'вероятность того, что мы получим (3,2,3,2,1), именно в этом порядке: {p_32321*100:.2f} %')\n",
+    "print(f'вероятность того, что мы получим (1,1,1,1,1,5), именно в этом порядке: {p_111115*100:.2f} %')"
    ]
   },
   {
@@ -314,13 +300,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "вероятность вытянуть любые 3 карты масти червей: 1.29 %\n",
+      "вероятность вытянуть 2 короля любой масти: 0.45 %\n",
+      "вероятность вытянуть 3 вальта любой масти: 0.02 %\n",
+      "вероятность вытянуть 5 карт (по очереди) любой масти достоинством более 2 и менее 10: 3.78 %\n",
+      "вероятность вытянуть 6 карт (по очереди) без единного туза: 60.28 %\n"
+     ]
+    }
+   ],
    "source": [
     "#Начало вашего кода\n",
+    "# У вас 52-карточная колода, какова вероятность вытянуть любые 3 карты масти червей (по очереди)? Присвойте результат переменной p_3_hearts.\n",
+    "hearts = 52/4\n",
+    "p_3_hearts = (hearts)/52*(hearts-1)/51*(hearts-2)/50\n",
     "\n",
-    "#Конец вашего кода"
+    "# У вас 52-карточная колода, какова вероятность вытянуть 2 короля любой масти (по очереди)? Присвойте результат переменной p_2_kings.\n",
+    "p_2_kings = 4/52*3/51\n",
+    "\n",
+    "# У вас 52-карточная колода, какова вероятность вытянуть 3 вальта любой масти (по очереди)? Присвойте результат переменной p_3_jacks.\n",
+    "p_3_jacks = 4/52*3/51*2/50\n",
+    "\n",
+    "# У вас 52-карточная колода, какова вероятность вытянуть 5 карт (по очереди) любой масти достоинством более 2 и менее 10? Присвойте результат переменной p_5_more_2_less_10.\n",
+    "p_5_more_2_less_10 = 28/52*27/51*26/50*25/49*24/48\n",
+    "\n",
+    "# У вас 52-карточная колода, какова вероятность вытянуть 6 карт (по очереди) без единного туза? Присвойте результат переменной p_no_ace.\n",
+    "p_no_ace = 48/52*47/51*46/50*45/49*44/48*43/47\n",
+    "\n",
+    "#Конец вашего кода\n",
+    "print(f'вероятность вытянуть любые 3 карты масти червей: {p_3_hearts*100:.2f} %')\n",
+    "print(f'вероятность вытянуть 2 короля любой масти: {p_2_kings*100:.2f} %')\n",
+    "print(f'вероятность вытянуть 3 вальта любой масти: {p_3_jacks*100:.2f} %')\n",
+    "print(f'вероятность вытянуть 5 карт (по очереди) любой масти достоинством более 2 и менее 10: {p_5_more_2_less_10*100:.2f} %')\n",
+    "print(f'вероятность вытянуть 6 карт (по очереди) без единного туза: {p_no_ace*100:.2f} %')"
    ]
   },
   {
@@ -357,13 +375,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "вероятность получения хотя бы одной пары (6, 6) за 10 бросков двух игральных костей: 24.55 %\n",
+      "вероятность получения хотя бы одной пары (2, 3) за 20 бросков двух игральных костей: 68.12 %\n",
+      "вероятность получения хотя бы одной пары чисел чья сумма равна 10 за 15 бросков двух игральных костей: 72.89 %\n",
+      "вероятность получения хотя бы одной пары чисел чье произведение четное за 5 бросков двух игральных костей: 99.90 %\n"
+     ]
+    }
+   ],
    "source": [
     "#Начало вашего кода\n",
+    "# Какова вероятность получения хотя бы одной пары {6,6} за 10 бросков двух игральных костей (обе игральные кости выбрасываются одновременно)? Присвойте результат переменной p_66_10.\n",
+    "p_66_1 = 1/6*1/6\n",
+    "p_no_66_1 = 1 - p_66_1\n",
+    "p_66_10 = 1 - p_no_66_1**10\n",
     "\n",
-    "#Конец вашего кода"
+    "# Какова вероятность получения хотя бы одной пары {2,3} за 20 бросков двух игральных костей (обе игральные кости выбрасываются одновременно)? Присвойте результат переменной p_23_20.\n",
+    "p_23_1 = 1/6*2/6 # 2/6 вероятность выпадения 3 так как кубик содержит две грани с цифрой 3\n",
+    "p_no_23_1 = 1 - p_23_1\n",
+    "p_23_20 = 1 - p_no_23_1**20\n",
+    "\n",
+    "# Какова вероятность получения хотя бы одной пары чисел чья сумма равна 10 за 15 бросков двух игральных костей (обе игральные кости выбрасываются одновременно)? Присвойте результат переменной p_sum_10_15.\n",
+    "p_sum_10_1 = 3/6**2\n",
+    "p_no_sum_10_1 = 1 - p_sum_10_1 \n",
+    "p_sum_10_15 = 1 - p_no_sum_10_1**15\n",
+    "# Результат совпадает с ожидаемым значением, но у меня вопрос:\n",
+    "# У нас же кубик не имеет 5, тогда возможных вариантов получить 10 не три, а два\n",
+    "# (4,6) (6,4), а (5,5) не может выпасть\n",
+    "\n",
+    "# Какова вероятность получения хотя бы одной пары чисел чье произведение четное за 5 бросков двух игральных костей (обе игральные кости выбрасываются одновременно)? Присвойте результат переменной p_prod_even_5.\n",
+    "p_even = 27 / 6**2\n",
+    "p_no_even = 1 - p_even\n",
+    "p_prod_even_5 = 1 - p_no_even**5\n",
+    "\n",
+    "#Конец вашего кода\n",
+    "print(f'вероятность получения хотя бы одной пары (6, 6) за 10 бросков двух игральных костей: {p_66_10*100:.2f} %')\n",
+    "print(f'вероятность получения хотя бы одной пары (2, 3) за 20 бросков двух игральных костей: {p_23_20*100:.2f} %')\n",
+    "print(f'вероятность получения хотя бы одной пары чисел чья сумма равна 10 за 15 бросков двух игральных костей: {p_sum_10_15*100:.2f} %')\n",
+    "print(f'вероятность получения хотя бы одной пары чисел чье произведение четное за 5 бросков двух игральных костей: {p_prod_even_5*100:.2f} %')"
    ]
   },
   {
